# CryptoXX

./: .clang-format  .gitignore  3des.hpp  CMakeLists.txt  Makefile  README.md  RECONSTRUCTION_TESTING.md  aes.hpp  aes_test.cpp  bits.hpp  block.hpp  cipher.cpp  cipher_test.sh  crypto.hpp  des.cpp  des.hpp  des.old.hpp  example.cpp  hash.cpp  hash_test.sh  main.cpp  sm4.hpp  sm4.old.hpp  utils.hpp
.github/workflows/: ci.yml
BlockCipher/: 3des.hpp  aes.hpp  block.hpp  des.hpp  des.old.hpp  main.cpp  sm4.hpp  sm4.old.hpp
Cipher/: 3des.hpp  aes.hpp  block.hpp  chacha.hpp  ctr.hpp  des.hpp  des.old.hpp  main.cpp  rc4.hpp  sm4.hpp  sm4.old.hpp  stream.hpp  zuc.hpp
CryptoXX/: LICENSE  Makefile  example.cpp  hash.cpp
CryptoXX/Cipher/: block.hpp  des.old.hpp
CryptoXX/Hash/: hash.hpp  sm3.hpp
CryptoXX/async/: async.hpp
CryptoXX/block/: 3des.hpp  camellia.hpp  sm4.hpp
CryptoXX/block/legacy/: camellia.hpp  sm4.hpp
CryptoXX/hash/: hash.hpp  hmac.hpp  sha.hpp  sha256.hpp  sha512.hpp
CryptoXX/hash/legacy/: md5.hpp  sha.hpp  sha256.hpp  sm3.hpp
CryptoXX/include/CryptoXX/: block.hpp  cfb.hpp  ctak.hpp  ofb.hpp  pcbc.hpp  stream.hpp  utils.hpp
CryptoXX/include/CryptoXX/alt/: aria.hpp  cast128.hpp  cast256.hpp  des.hpp  md5.hpp  rijndael.hpp
CryptoXX/include/CryptoXX/block/: aria.hpp  blowfish.hpp  cast128.hpp  cast256.hpp  des.hpp  idea.hpp  seed.hpp  serpent.hpp  twofish.hpp
CryptoXX/include/CryptoXX/hash/: blake2s.hpp  blake3.hpp  crc.hpp  sha256.hpp  whirlpool.hpp
CryptoXX/include/CryptoXX/stream/: zuc.hpp
CryptoXX/samples/: cipher.cpp  hash.cpp
CryptoXX/scripts/: cipher_test.sh  hash_test.sh
CryptoXX/stream/: chacha.hpp  ofb.hpp  rc4.hpp  stream.hpp  zuc.hpp
Hash/: crc.hpp  hash.hpp  md5.hpp  sm3.hpp
async/: async.hpp  cfb.hpp
block/: 3des.hpp  aes.hpp  block.hpp  blowfish.hpp  camellia.hpp  cast128.hpp  cast256.hpp  cbc.hpp  cube.hpp  des.hpp  des.old.hpp  ecb.hpp  idea.hpp  pcbc.hpp  rijndael.hpp  serpent.hpp  sm4.hpp  twofish.hpp
block/legacy/: camellia.hpp  cast128.hpp  cast256.hpp  cube.hpp  des.hpp  rijndael.hpp  serpent.hpp  sm4.hpp
build-cmake/: CMakeCache.txt  CTestTestfile.cmake  CryptoXXConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  compile_commands.json
cmake/: CryptoXXConfig.cmake.in  Testing.cmake  cmake_uninstall.cmake.in
ctak/: cfb.hpp  ctak.hpp
docs/: BUILD.md
hash/: blake2b.hpp  blake2s.hpp  blake3.hpp  crc.hpp  hash.hpp  hmac.hpp  keccak.hpp  md5.hpp  md5.old.hpp  sha.hpp  sha256.hpp  sha512.hpp  sm3.hpp  whirlpool.hpp
hash/legacy/: blake2b.hpp  blake2s.hpp  md5.hpp  sha.hpp  sha256.hpp  sha512.hpp  sm3.hpp
include/CryptoXX/: block.hpp  cbc.hpp  cfb.hpp  ctak.hpp  ctr.hpp  ecb.hpp  hash.hpp  hmac.hpp  ofb.hpp  pcbc.hpp  stream.hpp  utils.hpp
include/CryptoXX/alt/: aria.hpp  camellia.hpp  cast128.hpp  cast256.hpp  des.hpp  md5.hpp  rijndael.hpp  sha.hpp  sm3.hpp  sm4.hpp
include/CryptoXX/block/: aria.hpp  blowfish.hpp  camellia.hpp  cast128.hpp  cast256.hpp  cbc.hpp  des.hpp  ecb.hpp  idea.hpp  pcbc.hpp  rijndael.hpp  seed.hpp  serpent.hpp  sm4.hpp  twofish.hpp
include/CryptoXX/ctak/: cfb.hpp
include/CryptoXX/hash/: blake2b.hpp  blake2s.hpp  blake3.hpp  crc.hpp  hash.hpp  hmac.hpp  keccak.hpp  md5.hpp  sha.hpp  sha256.hpp  sha512.hpp  sm3.hpp  whirlpool.hpp
include/CryptoXX/stream/: chacha.hpp  ctr.hpp  ofb.hpp  rc4.hpp  salsa.hpp  stream.hpp  zuc.hpp
samples/: cipher.cpp  hash.cpp
scripts/: cipher_quick_test.sh  cipher_reconstruction_test.sh  cipher_test.sh  hash_reconstruction_test.sh  hash_test.sh  test_cipher
stream/: cfb.hpp  chacha.hpp  ctr.hpp  ofb.hpp  rc4.hpp  salsa.hpp  stream.hpp  zuc.hpp
tests/: test_hash.cpp
